--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
 	</script>
 </head>
 <body>
-	<a href="http://uxmonk.com" id="backToMonk">&laquo; UX Monk</a>
-
 	<div id="intro">
 		<h1>Simon Says</h1>
 		<p class="subnote">Inspired by <a href="http://www.youtube.com/watch?v=KVzZVYtt64I">Simon</a>&trade;</p>
 		<div class="bodyContent">
-			<p>I'll play a melody, and you play it back. Ready?</p>
+			<p>Repeat the sequnce after me and don't get distracted.</p>
 			<div class="controls"></div>
 			<a href="#" id="start" class="button">Start!</a>
 
