Small text edit

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>
 <a id="some-admin" class="anchor" href="#some-admin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some Admin</h3>
 
-<p>Created at Software Sustainability Institute Collaborations Workshop 2015 hackday</p>
+<p>Game created at Software Sustainability Institute Collaborations Workshop 2015 hackday</p>
       </section>
     </div>
 
