Second text edit

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Solution</h2>
 
-<p>Find a friendly way of demonstrating the importance of environment. Game that has: </p>
+<p>Find a friendly way of demonstrating the importance of environment. A game that has: </p>
 
 <ul>
 <li>programming-like task for non-programmers</li>
 <li>introduces distractions</li>
 <li>assesses effect of distractions on programming-like task</li>
-<li>modular, so people can design new annoying task</li>
+<li>modular, so people can design new annoying distractions</li>
 <li>produce metrics. Does distraction really affect tasks?</li>
 </ul>
 
