Heading added. Small text tweaks

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     <div class="container">
       <section id="main_content">
-        <h2>
+<h1><div style="text-align: center;"><q>go away, i'm coding</q></div></h1>
+
+<h2>
 <a id="the-problem" class="anchor" href="#the-problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Problem</h2>
 
 <p>Research software engineers often work in environments unsuitable for programming. Often management, colleagues don't recognise importance of environment.</p>
@@ -48,7 +50,6 @@
 
 <h3>
 <a id="some-admin" class="anchor" href="#some-admin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some Admin</h3>
-
 <p>Game created at Software Sustainability Institute Collaborations Workshop 2015 hackday</p>
       </section>
     </div>
