Added material re implementation, including placeholders

--- a/index.html
+++ b/index.html
@@ -41,11 +41,24 @@
 <p>Find a friendly way of demonstrating the importance of environment. A game that has: </p>
 
 <ul>
-<li>programming-like task for non-programmers</li>
+<li>programming-like task for non-programmers (featuring memory tasks)</li>
 <li>introduces distractions</li>
 <li>assesses effect of distractions on programming-like task</li>
 <li>modular, so people can design new annoying distractions</li>
 <li>produce metrics. Does distraction really affect tasks?</li>
+</ul>
+
+<h2>
+<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Implementation</h2>
+
+<p>Lots of reuse. Lots of stitching things together: </p>
+
+<ul>
+<li>SOMETHING ON THE BASE GAME</li>
+<li>SOMETHING ON THE INTERRUPTION</li>
+<li>Public Domain images from a number of sources (such as the DPLA's <a href="http://dp.la/info/gif-it-up/">GIF IT UP</a> competition) brought in as distractions</li>
+<li>SOMETHING ON THE DATA OUTPUT</li>
+<li>SOMETHING ON THE VISUALISATION OF THE DATA OUTPUT
 </ul>
 
 <h3>
