--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p>Find a friendly way of demonstrating the importance of environment. A game that has: </p>
 
 <ul>
-<li>programming-like task for non-programmers (featuring memory tasks)</li>
+<li>programming-like task for non-programmers (featuring memory tasks, for example)</li>
 <li>introduces distractions</li>
 <li>assesses effect of distractions on programming-like task</li>
 <li>modular, so people can design new annoying distractions</li>
