Make popup window with animated gifs.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
 		<div class="topbar"></div>
 		<div id="score"><span class="title">Score:</span> <span id="scoreNumber">0</span></div>
 	</div>
+
+	<dialog id="distractWindow">
+		<h2>KABOOOOM!</h2>
+		<iframe id="gifFrame" src="" width="300" height="300">
+		</iframe>
+		<button id="exitDistract">Exit</button>
+	</dialog>
+
+
 	<script type="text/javascript" src="inc/Event.js"></script>
 	<script type="text/javascript" src="inc/Loader.js"></script>
 	<script type="text/javascript" src="inc/MIDI.js/js/DOMLoader.script.js"></script>
