added image at the top

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <section id="main_content">
 <h1><div style="text-align: center;"><q>go away, i'm coding</q></div></h1>
 
+<div style="text-align: center;"><img src="https://dl-web.dropbox.com/get/root/bl/talks/2015-03_CW15/IMG_20150327_113943.jpg?_subject_uid=7685990&w=AAC1D4OIAYQ8ZSUf7TbXmxNdAdW3LSH0-DLQJj9utafsUA" height="370px" width="550px" /></div>
+<p></p>
 <h2>
 <a id="the-problem" class="anchor" href="#the-problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Problem</h2>
 
@@ -58,7 +60,20 @@
 <li>SOMETHING ON THE INTERRUPTION</li>
 <li>Public Domain images from a number of sources (such as the DPLA's <a href="http://dp.la/info/gif-it-up/">GIF IT UP</a> competition) brought in as distractions</li>
 <li>SOMETHING ON THE DATA OUTPUT</li>
-<li>SOMETHING ON THE VISUALISATION OF THE DATA OUTPUT
+<li>SOMETHING ON THE VISUALISATION OF THE DATA OUTPUT</li>
+</ul>
+
+<h2>
+<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Future Work</h2>
+
+<p>We have the basic workflow, but lots could be improved: </p>
+
+<ul>
+<li>"<em>Flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Adding different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that are problematic</li>
+<li><em>The positive effect of the coffee shop hum</em> (eg New York Times, <a href="hum of a coffee shop">2013</a>). Could we replicate attention boosting scenarios?</li>
+<li>OTHER EXAMPLES</li>
+<li>OTHER EXAMPLES</li>
+<li>OTHER EXAMPLES</li>
 </ul>
 
 <h3>
