--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<h1>Simon Says</h1>
 		<p class="subnote">Inspired by <a href="http://www.youtube.com/watch?v=KVzZVYtt64I">Simon</a>&trade;</p>
 		<div class="bodyContent">
-			<p>Repeat the sequnce after me and don't get distracted.</p>
+			<p>Repeat the sequence after me. Don't get distracted!</p>
 			<div class="controls"></div>
 			<a href="#" id="start" class="button">Start!</a>
 
