Added plot to visualise number of distractions and score

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
 
 	<div id="endScreen">
 		<h2>GREAT WORK!</h2>
-		Final score: <span id="finalScore">0</span>
+		Final score: <span id="finalScore">0</span><br>
+		With <span id="totalDistractions">0</span> distractions!!<br>
+		  <div style="width:30%">
+		   <div>
+		      <canvas id="canvas" class="plot" height="300" width="600"></canvas>
+		    </div>
+		  </div>
+
 		<a href="#" id="reset" class="button">Reset</a>
 	</div>
 
@@ -58,6 +65,7 @@
 		<div class="topbar"></div>
 		<div id="score"><span class="title">Score:</span> <span id="scoreNumber">0</span></div>
 	</div>
+	<script type="text/javascript" src="inc/Chart.js"></script>
 	<script type="text/javascript" src="inc/Event.js"></script>
 	<script type="text/javascript" src="inc/Loader.js"></script>
 	<script type="text/javascript" src="inc/MIDI.js/js/DOMLoader.script.js"></script>
