added licence and team info

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 
 <h3>
 <a id="some-admin" class="anchor" href="#some-admin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some Admin</h3>
-<p>Game created at Software Sustainability Institute Collaborations Workshop 2015 hackday</p>
-      </section>
+<p>Created at Software Sustainability Institute Collaborations Workshop 2015 hackday by <a href="https://twitter.com/matkuzak">Mateusz Kuzak</a>, <a href="http://www.researchgate.net/profile/David_Perez-Suarez">David Perez-Suarez</a>, <a href="https://twitter.com/tompollard">Tom Pollard</a>, <a href="http://www.sbcs.qmul.ac.uk/staff/joshuapotter.html">Joshua Potter</a>, and <a href="https://twitter.com/j_w_baker">James Baker</a>.</p>
+<p></p>
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. <em>Exceptions: embeds to and from external sources, and direct quotations</em>
     </div>
 
     
