fixed link to image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Simoncodes by simoncodes</title>
+    <title>Simoncodes</title>
   </head>
 
   <body>
@@ -30,7 +30,7 @@
       <section id="main_content">
 <h1><div style="text-align: center;"><q>go away, i'm coding</q></div></h1>
 
-<div style="text-align: center;"><img src="https://dl-web.dropbox.com/get/root/bl/talks/2015-03_CW15/IMG_20150327_113943.jpg?_subject_uid=7685990&w=AAC1D4OIAYQ8ZSUf7TbXmxNdAdW3LSH0-DLQJj9utafsUA" height="370px" width="550px" /></div>
+<div style="text-align: center;"><img src="images/img1.jpg" height="370px" width="550px" /></div>
 <p></p>
 <h2>
 <a id="the-problem" class="anchor" href="#the-problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Problem</h2>
