details added to future work

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 <p>Lots of reuse. Lots of stitching things together: </p>
 
 <ul>
-<li>SOMETHING ON THE BASE GAME</li>
-<li>SOMETHING ON THE INTERRUPTION</li>
-<li>Public Domain images from a number of sources (such as the DPLA's <a href="http://dp.la/info/gif-it-up/">GIF IT UP</a> competition) brought in as distractions</li>
-<li>SOMETHING ON THE DATA OUTPUT</li>
-<li>SOMETHING ON THE VISUALISATION OF THE DATA OUTPUT</li>
+<li>base game mechanic forked from <a href="https://github.com/simoncodes/HTML5-Simon-Says">HTML5-Simon-Says</a></li>
+<li>random pop-up interruptions added by the team</li>
+<li>public Domain images from a number of sources (such as the DPLA's <a href="http://dp.la/info/gif-it-up/">GIF IT UP</a> competition) brought in as distractions</li>
+<li>score is an array (1 to n) and interruption an array (0 or 1; where 1 is an interruption occurred) </li>
+<li>visualisation represents both the user score and where the interruptions appear (built in Javascript)</li>
 </ul>
 
 <h2>
@@ -69,11 +69,10 @@
 <p>We have the basic workflow, but lots could be improved: </p>
 
 <ul>
-<li>"<em>Flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Adding different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that are problematic</li>
-<li><em>The positive effect of the coffee shop hum</em> (eg New York Times, <a href="hum of a coffee shop">2013</a>). Could we replicate attention boosting scenarios?</li>
-<li>OTHER EXAMPLES</li>
-<li>OTHER EXAMPLES</li>
-<li>OTHER EXAMPLES</li>
+<li>"<em>flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Adding different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that are problematic</li>
+<li><em>the positive effect of the coffee shop hum</em> (eg New York Times, <a href="hum of a coffee shop">2013</a>). Could we replicate attention boosting scenarios?</li>
+<li>implementation of full data analytics</li>
+<li>implementation as a public service</li>
 </ul>
 
 <h3>
