added bit on the team, misc text changes and standardisation

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <div style="text-align: center;"><img src="images/img1.jpg" height="370px" width="550px" /></div>
 <p></p>
 <h2>
-<a id="the-problem" class="anchor" href="#the-problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Problem</h2>
+<a id="the-problem" class="anchor" href="#the-problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>the problem</h2>
 
 <p>Research software engineers often work in environments unsuitable for programming. Often management, colleagues don't recognise importance of environment.</p>
 
 <h2>
-<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Solution</h2>
+<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the solution</h2>
 
 <p>Find a friendly way of demonstrating the importance of environment. A game that has: </p>
 
@@ -51,20 +51,20 @@
 </ul>
 
 <h2>
-<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Implementation</h2>
+<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the implementation</h2>
 
 <p>Lots of reuse. Lots of stitching things together: </p>
 
 <ul>
-<li>base game mechanic forked from <a href="https://github.com/simoncodes/HTML5-Simon-Says">HTML5-Simon-Says</a></li>
+<li>base game mechanic forked from <a href="https://github.com/simoncodes/HTML5-Simon-Says">HTML5-Simon-Says</a> (MIT Licence assumed, creator contacted to establish this)</li>
 <li>random pop-up interruptions added by the team</li>
-<li>public Domain images from a number of sources (such as the DPLA's <a href="http://dp.la/info/gif-it-up/">GIF IT UP</a> competition) brought in as distractions</li>
-<li>score is an array (1 to n) and interruption an array (0 or 1; where 1 is an interruption occurred) </li>
-<li>visualisation represents both the user score and where the interruptions appear (built in Javascript)</li>
+<li>interruptions in the form of <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">Public Domain</a> images from the DPLA's <a href="http://dp.la/info/gif-it-up/">GIF IT UP</a> competition added by the team</li>
+<li>output of score is an array (1 to n) and interruption an array (0 or 1; where 1 is an interruption occurred) added by the team</li>
+<li>feedback in the form of a chart that represents both the user score and where the interruptions appear added by the team</li>
 </ul>
 
 <h2>
-<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Future Work</h2>
+<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the future</h2>
 
 <p>We have the basic workflow, but lots could be improved: </p>
 
@@ -75,8 +75,20 @@
 <li>implementation as a public service</li>
 </ul>
 
-<h3>
-<a id="some-admin" class="anchor" href="#some-admin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some Admin</h3>
+<h2>
+<a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the team</h2>
+
+<p>Team of five (with one contributing remotely). Played to the strengths of the individuals (a mix of technical and non-technical): </p>
+
+<ul>
+<li>organisation via Gitter, Github Issues, and Scrum Task Board</li>
+<li>two workstreams: interruptions and user feedback</li>
+<li>github Pages used for (this) public documentation</li>
+<li>lots of showing, teaching, helping, demoing, and learning to improve overall team skill set</li>
+</ul>
+
+<h2>
+<a id="some-admin" class="anchor" href="#some-admin" aria-hidden="true"><span class="octicon octicon-link"></span></a>the legal/credit/admin bit</h2>
 <p>Created at Software Sustainability Institute Collaborations Workshop 2015 hackday by <a href="https://twitter.com/matkuzak">Mateusz Kuzak</a>, <a href="http://www.researchgate.net/profile/David_Perez-Suarez">David Perez-Suarez</a>, <a href="https://twitter.com/tompollard">Tom Pollard</a>, <a href="http://www.sbcs.qmul.ac.uk/staff/joshuapotter.html">Joshua Potter</a>, and <a href="https://twitter.com/j_w_baker">James Baker</a>.</p>
 <p></p>
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. <em>Exceptions: embeds to and from external sources, and direct quotations</em>
