--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 <h2>
 <a id="the-problem" class="anchor" href="#the-problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>the problem</h2>
 
-<p>Research software engineers often work in environments unsuitable for programming. Often management, colleagues don't recognise importance of environment.</p>
+<p>research software engineers often work in environments unsuitable for programming. Often management, colleagues don't recognise importance of environment.</p>
 
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the solution</h2>
 
-<p>Find a friendly way of demonstrating the importance of environment. A game that has: </p>
+<p>find a friendly way of demonstrating the importance of environment. A game that has: </p>
 
 <ul>
 <li>programming-like task for non-programmers (featuring memory tasks, for example)</li>
@@ -53,7 +53,7 @@
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the implementation</h2>
 
-<p>Lots of reuse. Lots of stitching things together: </p>
+<p>lots of reuse. Lots of stitching things together: </p>
 
 <ul>
 <li>base game mechanic forked from <a href="https://github.com/simoncodes/HTML5-Simon-Says">HTML5-Simon-Says</a> (MIT Licence assumed, creator contacted to establish this)</li>
@@ -66,7 +66,7 @@
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the future</h2>
 
-<p>We have the basic workflow, but lots could be improved: </p>
+<p>we have the basic workflow, but lots could be improved: </p>
 
 <ul>
 <li>"<em>flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Adding different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that are problematic</li>
@@ -78,7 +78,7 @@
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the team</h2>
 
-<p>Team of five (with one contributing remotely). Played to the strengths of the individuals (a mix of technical and non-technical): </p>
+<p>team of five (with one contributing remotely). Played to the strengths of the individuals (a mix of technical and non-technical): </p>
 
 <ul>
 <li>organisation via Gitter, Github Issues, and Scrum Task Board</li>
@@ -89,7 +89,7 @@
 
 <h2>
 <a id="some-admin" class="anchor" href="#some-admin" aria-hidden="true"><span class="octicon octicon-link"></span></a>the legal/credit/admin bit</h2>
-<p>Created at Software Sustainability Institute Collaborations Workshop 2015 hackday by <a href="https://twitter.com/matkuzak">Mateusz Kuzak</a>, <a href="http://www.researchgate.net/profile/David_Perez-Suarez">David Perez-Suarez</a>, <a href="https://twitter.com/tompollard">Tom Pollard</a>, <a href="http://www.sbcs.qmul.ac.uk/staff/joshuapotter.html">Joshua Potter</a>, and <a href="https://twitter.com/j_w_baker">James Baker</a>.</p>
+<p>created at Software Sustainability Institute Collaborations Workshop 2015 hackday by <a href="https://twitter.com/matkuzak">Mateusz Kuzak</a>, <a href="http://www.researchgate.net/profile/David_Perez-Suarez">David Perez-Suarez</a>, <a href="https://twitter.com/tompollard">Tom Pollard</a>, <a href="http://www.sbcs.qmul.ac.uk/staff/joshuapotter.html">Joshua Potter</a>, and <a href="https://twitter.com/j_w_baker">James Baker</a>.</p>
 <p></p>
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. <em>Exceptions: embeds to and from external sources, and direct quotations</em>
     </div>
