fix for presentation

--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the solution</h2>
 
-<p>find a friendly way of demonstrating the importance of environment. A game that has: </p>
+<p>find a friendly way of demonstrating the importance of environment. A game that: </p>
 
 <ul>
-<li>programming-like task for non-programmers (featuring memory tasks, for example)</li>
+<li>has programming-like tasks for non-programmers (featuring for example memory tasks)</li>
 <li>introduces distractions</li>
-<li>assesses effect of distractions on programming-like task</li>
-<li>modular, so people can design new annoying distractions</li>
-<li>produce metrics. Does distraction really affect tasks?</li>
+<li>assesses the impact of distractions on programming-like task</li>
+<li>is modular, so that others can design new annoying distractions</li>
+<li>produces metrics so as to explore problems such as whether distraction really decreases productivity?</li>
 </ul>
 
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the implementation</h2>
 
-<p>lots of reuse. Lots of stitching things together: </p>
+<p>lots of reuse and lots of stitching things together: </p>
 
 <ul>
 <li>base game mechanic forked from <a href="https://github.com/simoncodes/HTML5-Simon-Says">HTML5-Simon-Says</a> (MIT Licence assumed, creator contacted to establish this)</li>
 <li>random pop-up interruptions added by the team</li>
 <li>interruptions in the form of <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">Public Domain</a> images from the DPLA's <a href="http://dp.la/info/gif-it-up/">GIF IT UP</a> competition added by the team</li>
-<li>output of score is an array (1 to n) and interruption an array (0 or 1; where 1 is an interruption occurred) added by the team</li>
-<li>feedback in the form of a chart that represents both the user score and where the interruptions appear added by the team</li>
+<li>output of score as an array (1 to n) and interruption as an array (0 or 1; where 1 is an interruption occurred) added by the team</li>
+<li>feedback in the form of a chart that represents both the user score and where the during the game interruptions appear added by the team</li>
 </ul>
 
 <h2>
@@ -69,29 +69,29 @@
 <p>we have the basic workflow, but lots could be improved: </p>
 
 <ul>
-<li>"<em>flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Adding different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that are problematic</li>
+<li>"<em>flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Adding different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that most are problematic</li>
 <li><em>the positive effect of the coffee shop hum</em> (eg New York Times, <a href="hum of a coffee shop">2013</a>). Could we replicate attention boosting scenarios?</li>
 <li>implementation of full data analytics</li>
-<li>implementation as a public service</li>
+<li>implementation as a public, web based service</li>
 </ul>
 
 <h2>
 <a id="the-solution" class="anchor" href="#the-solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>the team</h2>
 
-<p>team of five (with one contributing remotely). Played to the strengths of the individuals (a mix of technical and non-technical): </p>
+<p>team of five (with one contributing remotely) with work assigned so as to play to the strengths of each individual (a mix of technical and non-technical): </p>
 
 <ul>
-<li>organisation via Gitter, Github Issues, and Scrum Task Board</li>
-<li>two workstreams: interruptions and user feedback</li>
-<li>github Pages used for (this) public documentation</li>
-<li>lots of showing, teaching, helping, demoing, and learning to improve overall team skill set</li>
+<li>organisation via Gitter, GitHub issues, and Scrum Task Board</li>
+<li>three workstreams: interruptions, feedback, joining it all together, documentation</li>
+<li>public documentation (this page!) via GitHub Pages</li>
+<li>lots of showing, teaching, helping, demoing, and learning so as to improve overall team skill set</li>
 </ul>
 
 <h2>
 <a id="some-admin" class="anchor" href="#some-admin" aria-hidden="true"><span class="octicon octicon-link"></span></a>the legal/credit/admin bit</h2>
-<p>created at Software Sustainability Institute Collaborations Workshop 2015 hackday by <a href="https://twitter.com/matkuzak">Mateusz Kuzak</a>, <a href="http://www.researchgate.net/profile/David_Perez-Suarez">David Perez-Suarez</a>, <a href="https://twitter.com/tompollard">Tom Pollard</a>, <a href="http://www.sbcs.qmul.ac.uk/staff/joshuapotter.html">Joshua Potter</a>, and <a href="https://twitter.com/j_w_baker">James Baker</a>.</p>
+<p>created at <a href="http://www.software.ac.uk/cw15">Software Sustainability Institute Collaborations Workshop 2015</a> hackday by <a href="https://twitter.com/matkuzak">Mateusz Kuzak</a>, <a href="http://www.researchgate.net/profile/David_Perez-Suarez">David Perez-Suarez</a>, <a href="https://twitter.com/tompollard">Tom Pollard</a>, <a href="http://www.sbcs.qmul.ac.uk/staff/joshuapotter.html">Joshua Potter</a>, and <a href="https://twitter.com/j_w_baker">James Baker</a>.</p>
 <p></p>
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. <em>Exceptions: embeds to and from external sources, and direct quotations</em>
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a> This page is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. <em>Exceptions: embeds to and from external sources, and direct quotations</em>
     </div>
 
     
