final page commit; some minor text changes

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
 <ul>
 <li>has programming-like tasks for non-programmers (featuring for example memory tasks)</li>
-<li>introduces distractions</li>
+<li>introduces interruptions</li>
 <li>assesses the impact of distractions on programming-like task</li>
-<li>is modular, so that others can design new annoying distractions</li>
-<li>produces metrics so as to explore problems such as whether distraction really decreases productivity?</li>
+<li>is modular, so that others can design new annoying interruptions</li>
+<li>produces metrics so as to explore problems such as whether distractions really decrease productivity?</li>
 </ul>
 
 <h2>
@@ -69,8 +69,8 @@
 <p>we have the basic workflow, but lots could be improved: </p>
 
 <ul>
-<li>"<em>flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Adding different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that most are problematic</li>
-<li><em>the positive effect of the coffee shop hum</em> (eg New York Times, <a href="hum of a coffee shop">2013</a>). Could we replicate attention boosting scenarios?</li>
+<li>"<em>flow is fragile but, thankfully, it isn't as fragile as it first seems. Flow can only be broken if an interruption requires a programmer to mentally change contexts</em>" (Dollery, <a href="http://www.devx.com/DevX/Article/11659">2003</a>) Implementation of different categories of distraction - perhaps on a taxonomy from least to most similar to the main task - would allow demonstration of the types of distraction that most are problematic</li>
+<li><em>the positive effect of the coffee shop hum</em> (eg New York Times, <a href="hum of a coffee shop">2013</a>). Could we replicate attention boosting scenarios with welcome 'distractions'?</li>
 <li>implementation of full data analytics</li>
 <li>implementation as a public, web based service</li>
 </ul>
