Add dataset download

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		      <canvas id="canvas" class="plot" height="300" width="600"></canvas>
 		   </div>
 		  </div>
-
+		<a href="#" id="fetch" class="button">Fetch</a>
 		<a href="#" id="reset" class="button">Reset</a>
 	</div>
 
@@ -72,6 +72,8 @@
 	</dialog>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+	<script type="text/javascript" src="inc/Blob.js"></script>
+	<script type="text/javascript" src="inc/FileSaver.js"></script>
 	<script type="text/javascript" src="inc/Event.js"></script>
 	<script type="text/javascript" src="inc/Loader.js"></script>
 	<script type="text/javascript" src="inc/MIDI.js/js/DOMLoader.script.js"></script>
